# rust_web

./: Cargo.toml  README.md
src/: error.rs  errors.rs  main.rs
src/routes/: users.rs
templates/: index.html.tera
